# src/controllers/ingredients.js
@@ -1,0 +1,6 @@
+import { getAllIngredients } from '../services/ingredients.js';
+
+export const getIngredientsController = async (req, res) => {
+  const ingredients = await getAllIngredients();
+  res.json({ status: 200, data: ingredients });
+};
