# src/routers/index.js
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 import authRouter from './auth.js';
+import ingredientsRouter from './ingredients.js';
 
 const router = new Router();
 
@@ -9,7 +10,7 @@ router.use('/api/auth', authRouter);
 
 // router.use('/api/categories');
 
-// router.use('/api/ingredients');
+router.use('/api/ingredients', ingredientsRouter);
 
 // router.use('/api/recipes');
 
